# pegasus-lm

./: .gitignore  README.md  pyproject.toml
config/pegasus-gpt2-medium/: config.json
config/pegasus-gpt2-small/: config.json
pegasuslm/: __init__.py  utils.py
pegasuslm/exe/: upload.py
pegasuslm/gpt2/: __init__.py  config.py  model.py  tokenizer.py
pegasuslm/gpt2/datasets/: wiki40b.py
pegasuslm/gpt2/datasets/exe/: download.py  extract_text.py  preprocess.py
pegasuslm/gpt2/exe/: run_generation.py  spiece_trainer.py  train.py
spack/repos/pegasus-lm/: repo.yaml
src/: generation.sh
test/: data_collator.py  load_dataset.py  load_metric.py  load_tokenized_dataset.py  load_tokenizer.py  save_pretrained.py  test_multiprocessing.py  torch_verification.py
